# cpp-common

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg-configuration.json  vcpkg.json
cmake/: cpp-common.pc.in  cppcommonConfig.cmake.in
cmakes/: gtest_main.cmake
cppcommon/: api.h
cppcommon/3rd/httplib/: README.md  httplib.h
cppcommon/csp/: README.md  api.cc  api.h  csp_structs.h  info_provider_aliyun.h  info_provider_aws.h  info_provider_gcp.h  info_provider_interface.h
cppcommon/extends/abseil/: absl.h
cppcommon/extends/csv/: csv.h  csv.hpp
cppcommon/extends/fmt/: fmt.h
cppcommon/extends/httplib/: httplib_utils.h
cppcommon/extends/json/: builder.cc  builder.h
cppcommon/extends/rapidjson/: builder.cc  builder.h  differ.h  reader.h  utils.h
cppcommon/extends/spdlog/: log.cc  log.h
cppcommon/io/file/: rw.cc  rw.h
cppcommon/os/: machine_info.cc  machine_info.h  system_info.cc  system_info.h
cppcommon/partterns/: double_buffer.h  singleton.h
cppcommon/utils/: common.cc  common.h  compare.h  differ.h  error.h  macros.h  math.cc  math.h  os.cc  os.h  simple_config.cc  simple_config.h  str.cc  str.h  time.cc  time.h  time_ruler.cc  time_ruler.h  timer.cc  timer.h  to_str.h  type_traits.h
include/cxxcommon/: defines.h
include/cxxcommon/common/: defines.h  exceptions.h  log.h
include/cxxcommon/core/file/: read_write.h  rw.h
include/cxxcommon/file/: rw.h
include/cxxcommon/net/: net_utils.h
include/cxxcommon/net/http/: http_client.h  http_result.h
modules/object-storage/: CMakeLists.txt  README.md
modules/object-storage/cppcommon/objectstorage/: api.h
modules/object-storage/cppcommon/objectstorage/sink/: base_sink.h  local_arrow_sink.h  local_csv_sink.h  local_text_sink.h  parquet_sink.h
modules/object-storage/cppcommon/objectstorage/trans/: base_trans.cc  base_trans.h
modules/object-storage/cppcommon/objectstorage/transfor/: api.h  object_transfor.h  storage_provider.h  storage_provider_gcs.cc  storage_provider_gcs.h  storage_provider_oss.cc  storage_provider_oss.h  storage_provider_s3.cc  storage_provider_s3.h
modules/object-storage/cppcommon/objectstorage/utils/: arrow_utils.cc  arrow_utils.h
modules/object-storage/tests/: CMakeLists.txt
modules/object-storage/tests/gtest/: gtest_base_sink.cc  gtest_csv_sink.cc  gtest_sink.cc  gtest_trans.cc  gtest_trans_gcs.cc  gtest_trans_oss.cc  gtest_trans_s3.cc
src/core/file/: read_write.cpp  rw.cpp
src/cppcommon/io/file/: rw.cc
src/file/: rw.cpp
src/io/file/: rw.cc
src/net/: net_utils.cpp
src/net/http/: http_client.cpp  http_result.cpp
tests/: CMakeLists.txt
tests/gtest/: gtest_absl.cc  gtest_common.cc  gtest_compare.cc  gtest_double_buffer.cc  gtest_file.cc  gtest_json.cc  gtest_log.cc  gtest_simple_config.cc  gtest_str.cc  gtest_time.cc  gtest_time_ruler.cc  gtest_timer.cc  gtest_type_traits.cc  gtest_utils.cc  gtest_utils_os.cc
tests/gtest/csp/: gtest_csp_info.cc
tests/gtest/os/: gtest_machine_info.cc
tests/gtests/: gt_main.cpp  gtests_utils_os.cc
vcpkg-overlay/cpp-common/: portfile.cmake  usage  vcpkg.json
