set(OBJECT_STORAGE_LIB object-storage)
# 3rd packages
find_package(spdlog CONFIG REQUIRED)
find_package(absl CONFIG REQUIRED)

set(THIRD_LIBRARIES spdlog::spdlog absl::status)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB_RECURSE LIB_HREADERS ${CMAKE_CURRENT_SOURCE_DIR}/cppcommon/*.h)
file(GLOB_RECURSE LIB_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/cppcommon/*.cc)
add_library(${OBJECT_STORAGE_LIB} ${LIB_HREADERS} ${LIB_SRCS})
target_link_libraries(${OBJECT_STORAGE_LIB} ${THIRD_LIBRARIES})

# install files
install(
  TARGETS ${OBJECT_STORAGE_LIB}
  EXPORT ${OBJECT_STORAGE_LIB}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cppcommon
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
  FILES_MATCHING
  PATTERN "*.h")
install(
  EXPORT ${OBJECT_STORAGE_LIB}
  DESTINATION share/${OBJECT_STORAGE_LIB}
  FILE ${OBJECT_STORAGE_LIB}Config.cmake
  NAMESPACE ${OBJECT_STORAGE_LIB}::)
